♻️ refactor: getFirst() 변경